plugins {
    id "application"
    id "java"
    id "idea"
}

group = "net.ocheyedan.wrk"
version = "1.0"

repositories {
    // Standard Maven 
    mavenCentral()
}

dependencies {
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.10'
    
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
    
    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
    testCompile 'org.mockito:mockito-junit-jupiter:3.0.0'

}

// Java version selection
sourceCompatibility = 10
targetCompatibility = 10

configurations {
    application {
        mainClassName = 'net.ocheyedan.wrk.Wrk'
    }    
}

startScripts.enabled = false